# oxide-sloc

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  deny.toml  docker-compose.yml  install.sh  run.bat  run.sh  rust-toolchain.toml  vendor.tar.xz.sha256
.githooks/: pre-commit
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  docker.yml  release.yml  update-dist.yml
ci/: build.sh  lint.sh  release.sh  test.sh
ci/jenkins/: .env.example  Dockerfile.agent  README.md  bundle-rust-toolchain.sh  install-rust-cache.sh  install-system-deps.sh  install-vendor-cache.sh  job-config.xml  job-config.xml.tmpl  plugins.txt  preflight.sh  render-job-config.sh  seed-job.groovy
ci/jenkins/init.groovy.d/: relax-csp.groovy
ci/sonar/: generate-coverage.sh  sonar-project.properties
ci/tools/: Cargo.toml
crates/sloc-cli/: Cargo.toml
crates/sloc-cli/src/: main.rs
crates/sloc-config/: Cargo.toml  README.md
crates/sloc-config/src/: lib.rs
crates/sloc-core/: Cargo.toml  README.md
crates/sloc-core/src/: delta.rs  history.rs  lib.rs
crates/sloc-git/: Cargo.toml
crates/sloc-git/src/: lib.rs  ops.rs  schedule.rs  webhook.rs
crates/sloc-languages/: Cargo.toml  README.md
crates/sloc-languages/src/: lib.rs
crates/sloc-languages/tests/: golden.rs
crates/sloc-languages/tests/corpus/python/: mixed.py
crates/sloc-report/: Cargo.toml  README.md
crates/sloc-report/src/: lib.rs
crates/sloc-web/: Cargo.toml  README.md
crates/sloc-web/src/: git_browser.rs  git_webhook.rs  lib.rs
crates/sloc-web/templates/: _bg_body.html  _bg_css.html  _bg_js.html
docs/: airgap.md  ci-integrations.md  licensing-commercial.md  server-deployment.md
examples/bitbucket/: bitbucket-pipelines.yml
scripts/: airgap-build.sh  clippy_to_sonar.py  install-hooks.sh  install.sh  make-airgap-kit.sh  run.sh  update-vendor.sh
