[workspace]
members = [
  "crates/sloc-config",
  "crates/sloc-languages",
  "crates/sloc-core",
  "crates/sloc-report",
  "crates/sloc-web",
  "crates/sloc-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
version = "1.3.4"
authors = ["Nima Shafie"]
description = "Source line analysis tool with CLI, web UI, HTML/PDF reports, and CI/CD integration"
keywords = ["sloc", "code-analysis", "cli", "static-analysis", "metrics"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/oxide-sloc/oxide-sloc"
homepage = "https://github.com/oxide-sloc/oxide-sloc"
documentation = "https://docs.rs/oxide-sloc"
readme = "README.md"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1"
askama = "0.16"
axum = { version = "0.8", features = ["form", "json", "macros"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
encoding_rs = "0.8"
globset = "0.4"
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
ignore = "0.4"
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "builder", "smtp-transport"], default-features = false }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rustls = { version = "0.23", features = ["ring"], default-features = false }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", features = ["ring"], default-features = false }
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }

[workspace.metadata.oxide-sloc]
product_name = "oxide-sloc"
