[package]
name = "ci-tools"
version = "0.1.0"
edition = "2021"
publish = false

# This package is never built or published.  It exists solely so that
# `cargo vendor --sync ci/tools/Cargo.toml` includes the listed tools'
# source trees in vendor.tar.xz, making them installable on air-gapped
# agents with `cargo install --offline <crate-name>`.
#
# To add a new tool: append it here, re-run `bash scripts/update-vendor.sh`,
# then commit vendor.tar.xz + vendor.tar.xz.sha256.

[dependencies]
cargo-llvm-cov = "0.6"

# Prevents cargo from treating this package as a member of the parent workspace.
[workspace]
