[package]
name = "oxide-sloc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "oxide-sloc"
path = "src/main.rs"

[features]
default = ["native-dialog"]
native-dialog = ["sloc-web/native-dialog"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
uuid.workspace = true
lettre.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
sloc-config = { path = "../sloc-config", version = "1.4.0" }
sloc-core = { path = "../sloc-core", version = "1.4.0" }
sloc-git = { path = "../sloc-git", version = "1.4.0" }
sloc-report = { path = "../sloc-report", version = "1.4.0" }
sloc-web = { path = "../sloc-web", version = "1.4.0" }
