[package]
name = "sloc-git"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
uuid.workspace = true
