[package]
name = "sloc-git"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "Git operations, webhook verification, and scan-schedule management for oxide-sloc"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
uuid.workspace = true
