[package]
name = "sloc-report"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
askama.workspace = true
chrono.workspace = true
serde_json.workspace = true
sloc-core = { path = "../sloc-core", version = "1.3.0" }
