[package]
name = "sloc-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
rfd = "0.14"
serde_json = "1"
subtle = "2"
anyhow.workspace = true
askama.workspace = true
axum.workspace = true
chrono.workspace = true
hyper-util.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid = { workspace = true }
sloc-config = { path = "../sloc-config", version = "1.2.7" }
sloc-core = { path = "../sloc-core", version = "1.2.7" }
sloc-report = { path = "../sloc-report", version = "1.2.7" }
