[package]
name = "sloc-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[features]
native-dialog = ["dep:rfd"]

[dependencies]
rfd = { version = "0.17", optional = true }
secrecy = { version = "0.8", features = ["alloc"] }
serde_json = "1"
subtle = "2"
anyhow.workspace = true
askama.workspace = true
axum.workspace = true
chrono.workspace = true
hyper-util.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid = { workspace = true }
sloc-config = { path = "../sloc-config", version = "1.4.0" }
sloc-core = { path = "../sloc-core", version = "1.4.0" }
sloc-git = { path = "../sloc-git", version = "1.4.0" }
sloc-report = { path = "../sloc-report", version = "1.4.0" }
